# HandHeld3DScanner

demos/: opencvdemo.py
demos/rs-pointcloud-recorder/: CMakeLists.txt  README.md
demos/rs-pointcloud-recorder/inc/: example.hpp
demos/rs-pointcloud-recorder/src/: rs_pointcloud_recorder.cpp
handheld3dscanner/: .gitignore  FindCSparse.cmake  README.md  add_swap_space.sh  aptget_install_these.sh  bashrc_ldlibpath.sh  build_ceres.sh  build_cvsba.sh  build_g2o.sh  build_gtsam.sh  build_libboost158.sh  build_libpcl17.sh  build_libpcl19.sh  build_librealsense.sh  build_opencv3.sh  build_ros.sh  build_ros_rtabmap.sh  build_rtabmap.sh  configure_lxde_panel.sh  configure_rtabmap_ini.sh  desktop.conf  edit_sources.sh  install.sh  install_off_icon.sh  install_realsenseviewer_icon.sh  install_rtabmap_icon.sh  install_vtk6.sh  kernel_patch.sh  panel  patch_kernel_rpi-4.19.y.patch  patch_libpcl17.patch  patch_libpcl19.patch  patch_librealsense_ff2a291.patch  patch_librealsense_v2.29.0.patch  patch_opencv3.patch  patch_rtabmap_0.18.1.patch  patch_rtabmap_0.19.3-kinetic.patch  patch_uvc_kernel_module.patch  patchros_geometry2_buffercorecpp.patch  patchros_opencv3_cmakeliststxt.patch  (+12 more)
mech/: README.md  box.step  lid.iges  lid.step  lid_rect.iges  lid_rect.step  lid_rect.stl  lid_square.iges  lid_square.step  lid_square.stl
trash/: packagexml_ORB_SLAM2.xml  packagexml_Pangolin.xml  packagexml_fovis.xml  packagexml_libviso2.xml  packagexml_okvis.xml  patch_VINS-Fusion.patch  patch_VINS-Mono.patch  patch_fovis.patch  patch_gtsam_3.2.3.patch  patch_libviso2.patch
(+14 files in other folders)
